Closed Bug 1680164 Opened 3 years ago Closed 3 years ago

Don't restrict Nvidia device blocking to win10.

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox84 --- fixed
firefox85 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

Details

Attachments

(1 file)

Having Win10 here dates back to when we only ran on Win10

Having Win10 here dates back to when we only ran on Win10

Comment on attachment 9190705 [details]
Bug 1680164 - Don't restrict Nvidia device blocking to win10.

Beta/Release Uplift Approval Request

  • User impact if declined: WebRender will run on devices we don't intend for it to run on
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just a blocklist change. Very low risk
  • String changes made/needed:
Attachment #9190705 - Flags: approval-mozilla-beta?
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/895df5fe7afb
Don't restrict Nvidia device blocking to win10. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch

Comment on attachment 9190705 [details]
Bug 1680164 - Don't restrict Nvidia device blocking to win10.

Approved for 84.0b8.

Attachment #9190705 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: