Bug 1680164 - Don't restrict Nvidia device blocking to win10. r=aosmond

Having Win10 here dates back to when we only ran on Win10

Differential Revision: https://phabricator.services.mozilla.com/D98412